# raytracer

./: raytracer.cabal
app/: Main.hs
doc/: design.txt
src/: Epsilon.hs  Point.hs  Repl.hs  V3.hs  Vec.hs  Vector.hs
src/Geom/: Point.hs  Vector.hs
src/Math/: Epsilon.hs  V3.hs  Vec.hs
test/: TrivialSpec.hs
