cabal-version:      2.4
name:               raytracer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Olson
maintainer:         matto@mercury.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:     src
    -- ghc-options:        -Wall
    exposed-modules:    
        Repl
      , Math.Epsilon
      , Math.Vec
      , Math.V3
      , Geom.Vector
      , Geom.Point
    build-depends:
        base ^>=4.14.1.0
      , groups
    default-language: Haskell2010

executable raytracer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- hpack abstracts this into a package.yaml and do some
    --  auto-discovery
    other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , raytracer
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite raytracer-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base
                    , raytracer
                    , hspec
    build-tool-depends:
        hspec-discover:hspec-discover
    default-language: Haskell2010
    